--- a/src/layouts/layout.ejs
+++ b/src/layouts/layout.ejs
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= app.path.img %>/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= app.path.img %>/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= app.path.img %>/favicon/favicon-16x16.png">
+    <link rel="manifest" href="<%= app.path.img %>/favicon/site.webmanifest">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <% for (key in htmlWebpackPlugin.files.css) { %>
         <% if (htmlWebpackPlugin.files.cssIntegrity) { %>
           <link
