--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,4 @@
  <div class="home">
-    <img alt="pagenr logo" src="<%= app.path.img %>/assets/img/logo.png">
+    <img alt="pagenr logo" src="<%= app.path.img %>/logo.png">
     <h1><%= locales.home %></h1>
   </div>
